# muzaiten

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  VERSION
.github/workflows/: publish-features-clap.yml
cmake/: MuzaitenVersion.cmake  cmake_uninstall.cmake.in
docs/: cli.md  controls.md  data-safety.md  distribution.md  features-schema.md  logo-reference.md  musicbee-inference.md  playlist-import-jsonl.md  playlists.md  radio.md  roadmap.md  search.md  semantic-analysis.md  state-and-paths.md
packaging/: build-release.sh  org.11xx.muzaiten.desktop  org.11xx.muzaiten.metainfo.xml
packaging/features-clap/: README.md  check-arch-gate.py
resources/: resources.qrc
sidecar/docs/: features-schema.md
sidecar/embedder/: README.md  pyproject.toml
sidecar/embedder/src/muzaiten_embed/: __init__.py  cli.py  db.py  model.py
sidecar/embedder/tests/: test_embedder_sidecar.py
sidecar/indexer/: Cargo.toml  README.md
sidecar/indexer/examples/: analyze_raw.rs
sidecar/indexer/src/: lib.rs  main.rs
sidecar/indexer/src/dsp/: loudness.rs  mel.rs  mod.rs  onset.rs  stats.rs  stft.rs  tempo.rs
sidecar/indexer/tests/: scan_fixtures.rs
src/app/: AppCore.cpp  AppCore.h  AppPaths.cpp  AppPaths.h  DemoScreens.cpp  DemoScreens.h  MuzaitenApplication.cpp  MuzaitenApplication.h  main.cpp
src/cli/: MuzaitenCtl.cpp  SearchCli.cpp  SearchCli.h
src/core/: Album.h  Artist.h  FoldKey.h  GenreTags.cpp  GenreTags.h  HumanQuantity.cpp  HumanQuantity.h  MetadataBlob.cpp  MetadataBlob.h  MusicBrainzIds.h  MusicSort.cpp  MusicSort.h  Playlist.h  Rating.cpp  Rating.h  ScanRoot.h  Track.h  TrackDisplay.cpp  TrackDisplay.h  TrackFingerprint.h  Version.h.in
src/db/: Database.cpp  Database.h  PlaylistDatabase.cpp  PlaylistDatabase.h  Schema.h  SettingsStore.cpp  SettingsStore.h
src/features/: FeatureStore.cpp  FeatureStore.h  ProviderClient.cpp  ProviderClient.h  QualityRank.cpp  QualityRank.h  QueryEmbedding.cpp  QueryEmbedding.h  QueryVectorCache.cpp  QueryVectorCache.h  SongIdentity.cpp  SongIdentity.h
src/fs/: LinkRoot.h  MediaProbe.cpp  MediaProbe.h  PathResolver.cpp
src/indexer/: DecodeGate.h  Dsp.cpp  Dsp.h  DspVersion.h  FeaturesMain.cpp  Fft.cpp  Fft.h  IndexMain.cpp
src/ipc/: IpcServer.cpp  IpcServer.h  IpcSocket.cpp  IpcSocket.h
src/mpd/: MpdClient.cpp  MpdClient.h  MpdConfig.cpp  MpdConfig.h  MpdImportWorker.cpp  MpdImportWorker.h  MpdTrack.h
src/mpris/: MprisService.cpp  MprisService.h
src/playback/: AudioDeviceControl.cpp  AudioDeviceControl.h  GStreamerPlaybackBackend.cpp  GStreamerPlaybackBackend.h  PlaybackBackend.h  PlaybackTypes.h  QtPlaybackBackend.cpp  QtPlaybackBackend.h
src/player/: PlayerCore.cpp  PlayerCore.h
src/playlist/: PlaylistDropImportWorker.cpp  PlaylistDropImportWorker.h  PlaylistImport.cpp  PlaylistImport.h  PlaylistImportWorker.cpp  PlaylistImportWorker.h  PlaylistMatchIndex.cpp  PlaylistMatchIndex.h  PlaylistMatcher.cpp  PlaylistMatcher.h
src/reco/: AffinityPool.cpp  AffinityPool.h  ArtistRadio.cpp  ArtistRadio.h  GenreCuration.cpp  GenreCuration.h  RadioFilters.cpp  RadioFilters.h  RadioMix.cpp  RadioMix.h  RadioSession.cpp  RadioSession.h  ReasonText.cpp  ReasonText.h  TrackScorer.cpp  TrackScorer.h  WeightLearner.cpp  WeightLearner.h  WeightLearnerData.cpp  WeightLearnerData.h
src/scanner/: ArtworkCache.cpp  ArtworkCache.h  ArtworkResolver.cpp  ArtworkResolver.h  DirectoryWalker.cpp  DirectoryWalker.h  LibraryScanner.cpp  LibraryScanner.h  PathMetadataGuesser.cpp  PathMetadataGuesser.h  RatingTagSyncWorker.cpp  RatingTagSyncWorker.h  ScanPipeline.cpp  ScanPipeline.h  ScanWorker.cpp  ScanWorker.h  TagRating.cpp  TagRating.h  TagRatingWriter.cpp  TagRatingWriter.h  TagReader.cpp  TagReader.h
src/scrobble/: BackfillParse.cpp  BackfillParse.h  LastFmApi.cpp  LastFmApi.h  LastFmCredentials.h  LastFmScrobbler.cpp  LastFmScrobbler.h  ListenBrainzScrobbler.cpp  ListenBrainzScrobbler.h  ListenBrainzWorker.cpp  ListenBrainzWorker.h  ListenHistoryStore.cpp  ListenHistoryStore.h  ListenTracker.cpp  ListenTracker.h  PlayEventRecorder.cpp  PlayEventRecorder.h  ScrobbleBackfill.cpp  ScrobbleBackfill.h
src/search/: Exclusion.cpp  Exclusion.h  FuzzyMatch.cpp  FuzzyMatch.h  IndexCache.cpp  IndexCache.h  RankConfig.cpp  RankConfig.h  ResultRanker.cpp  ResultRanker.h  SearchIndex.cpp  SearchIndex.h  SearchMatcher.cpp  SearchMatcher.h  SearchQuery.cpp  SearchQuery.h  SearchRecord.h  SearchWorker.cpp  SearchWorker.h
src/ui/: AlbumArtFallback.cpp  AlbumArtFallback.h  AlbumArtView.cpp  AlbumArtView.h  AlbumGrid.cpp  AlbumGrid.h  AlbumGridDelegate.cpp  AlbumGridDelegate.h  ArtistSidebar.cpp  ArtistSidebar.h  AudioAnalysisData.cpp  AudioAnalysisData.h  AudioAnalysisDialogs.cpp  AudioAnalysisDialogs.h  ConditionEditor.cpp  ConditionEditor.h  DenseTableDelegate.cpp  (+102 more)
tests/: ArtworkCacheStub.cpp  CMakeLists.txt  bench_dsp.cpp  bench_fft.cpp  test_album_grid.cpp  test_arch_provider_gate.py  test_artwork_resolver.cpp  test_curation_dialog_data.cpp  test_decode_gate.cpp  test_dsp.cpp  test_exclusion.cpp  test_feature_store.cpp  test_features_refresh.cpp  test_fold.cpp  test_fuzzy_match.cpp  test_gstreamer_playback.cpp  test_idle_release_controller.cpp  test_indexer_scan.cpp  test_ipc_server.cpp  test_keybindings_dialog.cpp  test_lastfm_api.cpp  test_listen_history.cpp  test_main_panel_keybindings.cpp  test_main_window_navigation.cpp  test_metadata_blob.cpp  test_mpd_client.cpp  test_mpd_config.cpp  test_music_explorer_view.cpp  test_navigation_scroll.cpp  test_panel_border_style.cpp  test_panel_search.cpp  test_panel_search_bar.cpp  test_path_guesser.cpp  test_path_resolver.cpp  test_play_events.cpp  test_player_core.cpp  test_playlist_converter.py  test_playlist_database.cpp  test_playlist_import.cpp  test_playlist_view.cpp  (+20 more)
tools/features-clap/: README.md  pyproject.toml
tools/features-clap/scripts/: check_onnx_parity.py
tools/features-clap/src/muzaiten_features_clap/: __init__.py  cli.py  convert.py  db.py  embedder.py  model.py  ops.py  protocol.py
tools/features-clap/tests/: test_features_clap.py
(+35 files in other folders)
